fixed jazz resumator form field width on mobile

--- a/jazz.css
+++ b/jazz.css
@@ -297,6 +297,10 @@ tr {
   display: none;
 }
 
+#resumator-questionnaire-q1076694 {
+  width: 100%;
+}
+
 #resumator-submit-resume {
   font-weight: 600;
   font-size: 14px;
